--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.4.5",
+    "react-transition-group": "^4.4.2",
     "sass": "^1.52.2",
     "styled-components": "^5.3.5",
     "swiper": "^8.2.2",
